--- a/Hito1.ipynb
+++ b/Hito1.ipynb
@@ -834,13 +834,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "source": [
+    "Hola\n",
+    "a"
+   ],
+   "cell_type": "markdown",
    "metadata": {
     "id": "1VX6pA28C_to"
-   },
-   "outputs": [],
-   "source": []
+   }
   }
  ],
  "metadata": {
