--- a/Hito1.ipynb
+++ b/Hito1.ipynb
@@ -22,7 +22,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.3"
+      "version": "3.9.2-final"
     }
   },
   "cells": [
@@ -881,9 +881,7 @@
       "metadata": {
         "id": "R43PPvEGC5Nh"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -911,7 +909,24 @@
         "id": "1VX6pA28C_to"
       },
       "source": [
-        ""
+        "###Data Product 19 - Casos activos por comuna ###\n",
+        "#Cargamos el archivo y filtramos de manera que queden las cantidades que agrupan todas las comunas de una región\n",
+        "activos = pd.read_csv(\"https://raw.githubusercontent.com/MinCiencia/Datos-COVID19/master/output/producto19/CasosActivosPorComuna.csv\", delimiter=',')\n",
+        "activos = activos[activos[\"Comuna\"] == \"Total\"]\n",
+        "activos  = activos.set_index(\"Region\")\n",
+        "\n",
+        "#Cambiamos el nombre de una región solo por fines de comodidad en la visualización\n",
+        "activos = activos.rename(index={\"Del Libertador General Bernardo O’Higgins\":\"O'Higgins\"})\n",
+        "\n",
+        "#Guardamos un dataframe con los valores de población total por región, nos será útil para ver una evolución proporcional\n",
+        "poblacion = activos[\"Poblacion\"]\n",
+        "activos = activos.loc[:, \"2020-04-13\":]\n",
+        "proporcionalActivos = activos.div(poblacion, axis = 0).transpose()*100000\n",
+        "activos = activos.transpose()\n",
+        "\n",
+        "p\n",
+        "util_plot.plot_timeSeries(proporcionalActivos, \"Evolución de casos activos proporcionales por región\", \"Casos activos por 100.000 habitantes\", fig_size=(20,6))\n",
+        "util_plot.plot_timeSeries(activos, \"Evolución de casos activos por región\", \"Casos activos totales\", fig_size=(20,6))\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -922,8 +937,30 @@
         "id": "rooYukaZ3Dzj"
       },
       "source": [
-        "hola"
+        "En el análisis de casos totales vemos el comportamiento esperado, la región metropolitana se lleva la mayor parte. El caso proporcional nos revela información llamativa: no es la RM si no regiones como Los Lagos y La Araucanía las que tienen una mayor cantidad de casos activos por habitante. En particular el caso de Magallanes llama la atención por dispararse en comparación a las demáás regiones. El estudio subsecuente buscará dilucidar las causas de esta anomalía, las que serán útiles para comprender el comportamiento de la propagación y en base a esto diseñar planes más efectivos de control sanitario."
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "###Data Product 27 - Casos Asintomáticos por región###\n",
+        "asintomaticos = pd.read_csv(\"https://raw.githubusercontent.com/MinCiencia/Datos-COVID19/master/output/producto27/CasosNuevosSinSintomas.csv\", delimiter= ',')\n",
+        "asintomaticos = asintomaticos.set_index(\"Region\")\n",
+        "asintomaticos = asintomaticos.transpose()\n",
+        "asintomaticos = asintomaticos.loc[: , :\"Magallanes\"]\n",
+        "\n",
+        "util_plot.plot_timeSeries(asintomaticos, \"Evolución de asintomáticos por región\", \"Casos asintomáticos totales\", fig_size=(20,6))"
+      ]
+    },
+    {
+      "source": [
+        "Parecido al escenario anterior se presentan los casos asintomáticos, con regiones  significativamente menos pobladas que la RM presentando comportamientos similares. El estudio de estos sujetos puede suponer otro factor importante en el entendimiento del virus y su propagación: la hipótesis es que al no manifestar los síntomas puede dar una falsa sensación de seguridad lo que no reduciría la movilidad y termina siendo un vector de tranmisión."
+      ],
+      "cell_type": "markdown",
+      "metadata": {}
     }
   ]
 }
