--- a/Clustering_hito2.ipynb
+++ b/Clustering_hito2.ipynb
@@ -2421,9 +2421,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "torch_gpu_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "torch_gpu_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2435,9 +2435,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
