--- a/Clustering_hito3.ipynb
+++ b/Clustering_hito3.ipynb
@@ -9410,7 +9410,7 @@
    "hash": "7133783fff6855f0aa3cff49db2745b360dea32b5eb3db1d7b4308a4ab676c4b"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -9424,7 +9424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
